appId: io.diabetactic.app
name: State Persistence Test
---
- runFlow: ../flows/login.yaml
- runScript: ../scripts/login-user-2002.js
- runFlow: ../flows/login-form-steps.yaml
- runFlow: ../flows/tap-vamos.yaml
- assertVisible: ".*Dashboard.*"
- tapOn: ".*Readings.*"
- assertVisible: ".*Glucose Readings.*"
- stopApp
- launchApp:
    appId: "io.diabetactic.app"
    clearState: false
- assertVisible: ".*Glucose Readings.*"
